--- a/Frontend/src/app/view/business-register/br-step2/br-step2.component.html
+++ b/Frontend/src/app/view/business-register/br-step2/br-step2.component.html
@@ -1,133 +1,131 @@
-<div class="bg-light rounded-3 py-4 px-md-4 mb-3">
-  <div class="steps pt-4 pb-1">
-    <div class="step active">
-      <div class="step-progress"><span class="step-progress-start"></span><span class="step-progress-end"></span><span class="step-number">1</span></div>
-      <div class="step-label">User Info</div>
-    </div>
-    <div class="step active">
-      <div class="step-progress"><span class="step-progress-start"></span><span class="step-progress-end"></span><span class="step-number">2</span></div>
-      <div class="step-label">Business Info</div>
-    </div>
-    <div class="step">
-      <div class="step-progress"><span class="step-progress-start"></span><span class="step-progress-end"></span><span class="step-number">3</span></div>
-      <div class="step-label">Ownership</div>
-    </div>
-    <div class="step">
-      <div class="step-progress"><span class="step-progress-start"></span><span class="step-progress-end"></span><span class="step-number">4</span></div>
-      <div class="step-label">Service & Socials</div>
-    </div>
-    <div class="step">
-      <div class="step-progress"><span class="step-progress-start"></span><span class="step-progress-end"></span><span class="step-number">5</span></div>
-      <div class="step-label">Verification</div>
-    </div>
-    <div class="step">
-      <div class="step-progress"><span class="step-progress-start"></span><span class="step-progress-end"></span><span class="step-number">6</span></div>
-      <div class="step-label">Confirmation</div>
-    </div>
-  </div>
-</div>
-<!-- Step 2: Business Info-->
-<div class="bg-light rounded-3 p-4 p-md-5 mb-3">
-  <h2 class="h4 mb-4"><i class="fi-info-circle text-primary fs-5 mt-n1 me-2"></i>Business Info</h2>
-  <div class="row">
-    <div class="col-sm-6 mb-4">
-      <label class="form-label" for="biz-name">Business name <span class='text-danger'>*</span></label>
-      <input class="form-control form-control-lg" type="text" id="biz-name" value="" placeholder="Enter your business name" required>
-    </div>
-    <div class="col-sm-6 mb-4">
-      <label class="form-label" for="biz-address">Business address <span class='text-danger'>*</span></label>
-      <input class="form-control form-control-lg" type="email" id="biz-address" value="" placeholder="Enter your business address" required>
-    </div>
-    <div class="col-sm-6 mb-4">
-      <label class="form-label" for="biz-brnum">Business registration number<span class='text-danger'>*</span></label>
-      <input class="form-control form-control-lg" type="text" id="biz-brnum" value="" placeholder="Enter your business registration number" required>
-    </div>
-    <div class="col-sm-6 mb-4">
-      <label class="form-label" for="biz-country">Country <span class='text-danger'>*</span></label>
-      <select class="form-select form-select-lg" id="biz-country" required>
-        <option value="" disabled selected>Choose country</option>
-        <option value="Sri Lanka">Sri Lanka</option>
-        <option value="Australia">Australia</option>
-        <option value="Belgium">Belgium</option>
-        <option value="Canada">Canada</option>
-        <option value="China">China</option>
-        <option value="Denmark">Denmark</option>
-        <option value="France">France</option>
-        <option value="Germany">Germany</option>
-        <option value="Japan">Japan</option>
-        <option value="UK">UK</option>
-        <option value="USA">USA</option>
-      </select>
-    </div>
-    <div class="col-sm-12">
-      <div class="alert alert-info mb-4" role="alert">
-        <div class="d-flex"><i class="fi-alert-circle me-2 me-sm-3"></i>
-          <p class="fs-sm mb-1">Filling out your business location.</p>
+<form #brForm2="ngForm" (ngSubmit)="brForm2.form.valid && onSubmit()" novalidate>
+
+  <!-- Step 2: Business Info-->
+  <div class="bg-light rounded-3 p-4 p-md-5 mb-3">
+    <h2 class="h4 mb-4"><i class="fi-info-circle text-primary fs-5 mt-n1 me-2"></i>Business Info</h2>
+    <div class="row">
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="biz-name">Business name <span class='text-danger'>*</span></label>
+        <input class="form-control form-control-lg" type="text" id="biz-name" value=""
+               placeholder="Enter your business name" required>
+      </div>
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="biz-address">Business address <span class='text-danger'>*</span></label>
+        <input class="form-control form-control-lg" type="email" id="biz-address" value=""
+               placeholder="Enter your business address" required>
+      </div>
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="biz-brnum">Business registration number<span class='text-danger'>*</span></label>
+        <input class="form-control form-control-lg" type="text" id="biz-brnum" value=""
+               placeholder="Enter your business registration number" required>
+      </div>
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="biz-country">Country <span class='text-danger'>*</span></label>
+        <select class="form-select form-select-lg" id="biz-country" required>
+          <option value="" disabled selected>Choose country</option>
+          <option value="Sri Lanka">Sri Lanka</option>
+          <option value="Australia">Australia</option>
+          <option value="Belgium">Belgium</option>
+          <option value="Canada">Canada</option>
+          <option value="China">China</option>
+          <option value="Denmark">Denmark</option>
+          <option value="France">France</option>
+          <option value="Germany">Germany</option>
+          <option value="Japan">Japan</option>
+          <option value="UK">UK</option>
+          <option value="USA">USA</option>
+        </select>
+      </div>
+      <div class="col-sm-12">
+        <div class="alert alert-info mb-4" role="alert">
+          <div class="d-flex"><i class="fi-alert-circle me-2 me-sm-3"></i>
+            <p class="fs-sm mb-1">Filling out your business location.</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-sm-6 mb-4">
-      <label class="form-label" for="biz-district">District <span class='text-danger'>*</span></label>
-      <select class="form-select form-select-lg" id="biz-district" required>
-        <option value="" disabled selected>Choose district</option>
-        <option value="Sri Lanka">Sri Lanka</option>
-        <option value="Australia">Australia</option>
-        <option value="Belgium">Belgium</option>
-        <option value="Canada">Canada</option>
-        <option value="China">China</option>
-        <option value="Denmark">Denmark</option>
-        <option value="France">France</option>
-        <option value="Germany">Germany</option>
-        <option value="Japan">Japan</option>
-        <option value="UK">UK</option>
-        <option value="USA">USA</option>
-      </select>
-    </div>
-    <div class="col-sm-6 mb-4">
-      <label class="form-label" for="biz-town">Town <span class='text-danger'>*</span></label>
-      <select class="form-select form-select-lg" id="biz-country" required>
-        <option value="" disabled selected>Choose town</option>
-        <option value="Sri Lanka">Sri Lanka</option>
-        <option value="Australia">Australia</option>
-        <option value="Belgium">Belgium</option>
-        <option value="Canada">Canada</option>
-        <option value="China">China</option>
-        <option value="Denmark">Denmark</option>
-        <option value="France">France</option>
-        <option value="Germany">Germany</option>
-        <option value="Japan">Japan</option>
-        <option value="UK">UK</option>
-        <option value="USA">USA</option>
-      </select>
-    </div>
-    <div class="col-sm-12">
-      <div class="alert alert-info mb-4" role="alert">
-        <div class="d-flex"><i class="fi-alert-circle me-2 me-sm-3"></i>
-          <p class="fs-sm mb-1">Filling out your business contact details.</p>
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="biz-district">District <span class='text-danger'>*</span></label>
+        <select class="form-select form-select-lg" id="biz-district" required>
+          <option value="" disabled selected>Choose district</option>
+          <option value="Sri Lanka">Sri Lanka</option>
+          <option value="Australia">Australia</option>
+          <option value="Belgium">Belgium</option>
+          <option value="Canada">Canada</option>
+          <option value="China">China</option>
+          <option value="Denmark">Denmark</option>
+          <option value="France">France</option>
+          <option value="Germany">Germany</option>
+          <option value="Japan">Japan</option>
+          <option value="UK">UK</option>
+          <option value="USA">USA</option>
+        </select>
+      </div>
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="biz-town">Town <span class='text-danger'>*</span></label>
+        <select class="form-select form-select-lg" id="biz-country" required>
+          <option value="" disabled selected>Choose town</option>
+          <option value="Sri Lanka">Sri Lanka</option>
+          <option value="Australia">Australia</option>
+          <option value="Belgium">Belgium</option>
+          <option value="Canada">Canada</option>
+          <option value="China">China</option>
+          <option value="Denmark">Denmark</option>
+          <option value="France">France</option>
+          <option value="Germany">Germany</option>
+          <option value="Japan">Japan</option>
+          <option value="UK">UK</option>
+          <option value="USA">USA</option>
+        </select>
+      </div>
+      <div class="col-sm-12">
+        <div class="alert alert-info mb-4" role="alert">
+          <div class="d-flex"><i class="fi-alert-circle me-2 me-sm-3"></i>
+            <p class="fs-sm mb-1">Filling out your business contact details.</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="pb-4 mb-2">
-      <label class="form-label fw-bold mb-3">Contacts</label>
-      <div class="d-flex align-items-center mb-3">
-        <div class="btn btn-icon btn-light btn-xs shadow-sm rounded-circle pe-none flex-shrink-0 me-3"><i class="fi-mail text-body"></i></div>
-        <input class="form-control" type="text" placeholder="Your business e-mail">
-      </div>
-      <div class="d-flex align-items-center mb-3">
-        <div class="btn btn-icon btn-light btn-xs shadow-sm rounded-circle pe-none flex-shrink-0 me-3"><i class="fi-phone text-body"></i></div>
-        <input class="form-control" type="text" placeholder="Your business contact number 1">
-      </div>
-      <div class="collapse" id="showMoreSocials">
+      <div class="pb-4 mb-2">
+        <label class="form-label fw-bold mb-3">Contacts</label>
         <div class="d-flex align-items-center mb-3">
-          <div class="btn btn-icon btn-light btn-xs shadow-sm rounded-circle pe-none flex-shrink-0 me-3"><i class="fi-phone text-body"></i></div>
-          <input class="form-control" type="text" placeholder="Your business contact number 2">
+          <div class="btn btn-icon btn-light btn-xs shadow-sm rounded-circle pe-none flex-shrink-0 me-3"><i
+            class="fi-mail text-body"></i></div>
+          <input class="form-control" type="text" placeholder="Your business e-mail">
         </div>
         <div class="d-flex align-items-center mb-3">
-          <div class="btn btn-icon btn-light btn-xs shadow-sm rounded-circle pe-none flex-shrink-0 me-3"><i class="fi-phone text-body"></i></div>
-          <input class="form-control" type="text" placeholder="Your business contact number 3">
+          <div class="btn btn-icon btn-light btn-xs shadow-sm rounded-circle pe-none flex-shrink-0 me-3"><i
+            class="fi-phone text-body"></i></div>
+          <input class="form-control" type="text" placeholder="Your business contact number 1">
         </div>
-      </div><a class="collapse-label collapsed d-inline-block fs-sm fw-bold text-decoration-none pt-2" href="#showMoreSocials" data-bs-toggle="collapse" data-bs-label-collapsed="Show more" data-bs-label-expanded="Show less" role="button" aria-expanded="false" aria-controls="showMoreSocials"><i class="fi-arrow-down me-2"></i></a>
+        <div class="collapse" id="showMoreSocials">
+          <div class="d-flex align-items-center mb-3">
+            <div class="btn btn-icon btn-light btn-xs shadow-sm rounded-circle pe-none flex-shrink-0 me-3"><i
+              class="fi-phone text-body"></i></div>
+            <input class="form-control" type="text" placeholder="Your business contact number 2">
+          </div>
+          <div class="d-flex align-items-center mb-3">
+            <div class="btn btn-icon btn-light btn-xs shadow-sm rounded-circle pe-none flex-shrink-0 me-3"><i
+              class="fi-phone text-body"></i></div>
+            <input class="form-control" type="text" placeholder="Your business contact number 3">
+          </div>
+        </div>
+        <a class="collapse-label collapsed d-inline-block fs-sm fw-bold text-decoration-none pt-2"
+           href="#showMoreSocials"
+           data-bs-toggle="collapse" data-bs-label-collapsed="Show more" data-bs-label-expanded="Show less"
+           role="button"
+           aria-expanded="false" aria-controls="showMoreSocials"><i class="fi-arrow-down me-2"></i></a>
+      </div>
     </div>
+
   </div>
 
-</div>
+  <div class="d-flex flex-column flex-sm-row bg-light rounded-3 p-4 px-md-5">
+    <button type="button" class="btn btn-primary btn-lg rounded-pill"
+            (click)="previousPage()">
+      <i class="fi-chevron-left fs-sm"></i> Previous step
+    </button>
+    <button type="submit" class="btn btn-primary btn-lg rounded-pill ms-sm-auto">
+      Next step <i class="fi-chevron-right fs-sm ms-2"></i>
+    </button>
+  </div>
+
+</form>
