--- a/Frontend/src/app/view/business-register/br-step6/br-step6.component.html
+++ b/Frontend/src/app/view/business-register/br-step6/br-step6.component.html
@@ -1,4 +1,3 @@
-
 <div class="bg-light rounded-3 p-4 p-md-5 mb-3">
   <h2 class="h4 mb-4">
     <i class="fi-info-circle text-primary fs-5 mt-n1 me-2"></i
@@ -10,7 +9,9 @@
         <div class="d-flex">
           <i class="fi-check-circle me-2 me-sm-3"></i>
           <p class="fs-sm mb-1">
-            <b> Congratulations... </b><br/> You have successfully created your business account.<br/> We will contact you with in 24 hours to confirm your business account information.<br/>Then you can Login to your account.<br/> <b>Thank you</b>
+            <b> Congratulations... </b><br/> You have successfully created your business account.<br/> We will contact
+            you with in 24 hours to confirm your business account information.<br/>Then you can Login to your
+            account.<br/> <b>Thank you</b>
           </p>
         </div>
       </div>
@@ -18,4 +19,15 @@
 
 
   </div>
+</div>
+
+<div class="d-flex flex-column flex-sm-row bg-light rounded-3 p-4 px-md-5">
+  <button type="button" class="btn btn-primary btn-lg rounded-pill"
+          (click)="previousPage()">
+    <i class="fi-chevron-left fs-sm"></i> Previous step
+  </button>
+  <button type="submit" class="btn btn-primary btn-lg rounded-pill ms-sm-auto"
+          (click)="onSubmit()">
+    Finish
+  </button>
 </div>
