--- a/Frontend/src/app/view/business-register/br-step4/br-step4.component.html
+++ b/Frontend/src/app/view/business-register/br-step4/br-step4.component.html
@@ -23,7 +23,7 @@
         <ng-select
           [items]="businessCategories"
           bindLabel="name"
-          placeholder="Select Service areas"
+          placeholder="Select Business Types"
           dropdownPosition="auto"
           [multiple]="true"
           [searchWhileComposing]="true"
@@ -44,7 +44,7 @@
         <ng-select
           [items]="businessAreas"
           bindLabel="name"
-          placeholder="Select Service areas"
+          placeholder="Select Service Areas"
           dropdownPosition="auto"
           [multiple]="true"
           [searchWhileComposing]="true"
