--- a/Frontend/src/app/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
+++ b/Frontend/src/app/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
@@ -54,7 +54,10 @@
 
 <div class="collapse" id="add-new-package">
   <div class="card card-body">
-    <form class="needs-validation" novalidate>
+
+    <form #baManageFormPackage="ngForm"
+          (ngSubmit)="baManageFormPackage.form.valid && package.itemItemPackages.length > 0 && onSubmit()" novalidate>
+
       <div class="row">
         <div class="col-md-8 mb-3">
           <label class="form-label" for="validationTooltipp1"
@@ -69,13 +72,13 @@
             type="text"
             id="validationTooltipp1"
             placeholder="Package name"
-            value=""
+            [(ngModel)]="package.name" #packageName="ngModel" name="packageName"
             required
           />
-          <div class="invalid-tooltip">
-            Please fill Package name
+          <div *ngIf="(packageName.touched || baManageFormPackage.submitted) && packageName.errors?.required"
+               class="validErr">
+            Package Name is required
           </div>
-          <div class="valid-tooltip">Looks good!</div>
         </div>
 
       </div>
@@ -92,18 +95,19 @@
           <select
             class="form-select"
             id="validationTooltipp2"
-            required
+            [(ngModel)]="package.discountType" #discountType="ngModel" name="discountType"
           >
             <option value="None">None</option>
-            <option value="Category">Cash</option>
-            <option value="Package">Precentage</option>
+            <option value="Cash">Cash</option>
+            <option value="Percentage">Percentage</option>
           </select>
-          <div class="invalid-tooltip">
-            Please provide a discount type.
-          </div>
+          <!--<div *ngIf="(discountType.touched || baManageFormPackage.submitted) && discountType.errors?.required"-->
+          <!--class="validErr">-->
+          <!--Package Name is required-->
+          <!--</div>-->
           <div class="valid-tooltip">Looks good!</div>
         </div>
-        <div class="col-md-4 mb-3">
+        <div class="col-md-4 mb-3" *ngIf="package.discountType!=='None'">
           <label class="form-label" for="validationTooltipp3"
           >Discount</label
           >
@@ -114,16 +118,16 @@
           </a>
           <input
             class="form-control"
-            type="text"
+            type="number"
             id="validationTooltipp3"
             placeholder="Discount"
-            value=""
+            [(ngModel)]="package.discount" #discount="ngModel" name="discount"
             required
           />
-          <div class="invalid-tooltip">
-            Please enter package discount
+          <div *ngIf="(discount.touched || baManageFormPackage.submitted) && discount.errors?.required"
+               class="validErr">
+            Discount is required
           </div>
-          <div class="valid-tooltip">Looks good!</div>
         </div>
         <div class="col-md-4 mb-3">
           <label class="form-label" for="validationTooltipp3"
@@ -144,13 +148,58 @@
           /> -->
           <div class="input-group">
             <span class="input-group-text fs-lg py-1">LKR</span>
-            <input type="text" class="form-control" id="validationTooltipp3" placeholder="Amount" required>
-            <span class="input-group-text">.00</span>
-            <div class="invalid-tooltip">
-              Please enter package price
-            </div>
-            <div class="valid-tooltip">Looks good!</div>
+            <input type="number" class="form-control" id="validationTooltipp3" placeholder="Amount" required
+                   [(ngModel)]="package.price" #price="ngModel" name="price">
+            <!--<span class="input-group-text">.00</span>-->
+            <!--<div class="invalid-tooltip">-->
+            <!--Please enter package price-->
+            <!--</div>-->
+            <!--<div class="valid-tooltip">Looks good!</div>-->
           </div>
+          <div *ngIf="(price.touched || baManageFormPackage.submitted) && price.errors?.required"
+               class="validErr">
+            Price is required
+          </div>
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 mb-3">
+          <label class="form-label"
+          >Business type </label
+          >
+          <a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"
+             data-bs-toggle="tooltip" title="Select this item belongs to which type of business"
+             data-bs-original-title="Select this item belongs to which type of business"
+             aria-label="Select this item belongs to which type of business"><i class="fi-help"></i>
+          </a>
+          <!-- <div class="d-flex flex-column flex-sm-row"> -->
+          <ng-select
+            [items]="businessCategories"
+            bindLabel="name"
+            placeholder="Select Business Type"
+            dropdownPosition="auto"
+            [multiple]="false"
+            [searchWhileComposing]="true"
+            name="businessProfileCategories"
+            #businessProfileCategories="ngModel" required
+            (change)="getItems()"
+            [(ngModel)]="package.businessProfileCategory">
+          </ng-select>
+          <div
+            *ngIf="(businessProfileCategories.touched || baManageFormPackage.submitted) && businessProfileCategories.errors?.required"
+            class="validErr">
+            Business type is required
+          </div>
+          <!-- <div class="invalid-tooltip">
+            Please fill item quantity
+          </div>
+          <div class="valid-tooltip">Looks good!</div> -->
+          <!-- <button type="button" class="btn btn-light-primary btn-icon shadow-sm">
+            <i class="fi-plus"></i>
+          </button> -->
+          <!-- <button class="btn btn-translucent-primary rounded-pill" type="button">Add</button> -->
+          <!-- </div> -->
 
         </div>
       </div>
@@ -164,12 +213,53 @@
              data-bs-original-title="You can add items for this pakage."
              aria-label="You can add items for this pakage."><i class="fi-help"></i>
           </a>
-          <select class="form-select flex-grow" multiple name="packageitem[]" id="package-item">
-            <option value="001-Item1">001-Item1</option>
-            <option value="002-Item2">002-Item2</option>
-            <option value="003-Item3">003-Item3</option>
-            <option value="004-Item4">004-Item4</option>
-          </select>
+          <form #baManageFormPackageItemExs="ngForm" (ngSubmit)="baManageFormPackageItemExs.form.valid && addItem()"
+                novalidate>
+
+            <div class="d-flex flex-column flex-sm-row">
+              <div style="width: 100%">
+                <div>
+                  <ng-select
+                    [items]="items"
+                    bindLabel="name"
+                    placeholder="Select Item"
+                    dropdownPosition="auto"
+                    [multiple]="false"
+                    [searchWhileComposing]="true"
+                    name="iFeature"
+                    #iFeature="ngModel" required
+                    [(ngModel)]="item"
+                    style="width: 100%">
+                  </ng-select>
+                </div>
+                <div
+                  *ngIf="(baManageFormPackageItemExs.submitted || baManageFormPackage.submitted) && (itemsAdded===undefined || package.items.length===0)"
+                  class="validErr">
+                  Item is required
+                </div>
+                <!--<div style="color: blue;padding-left: 10px;padding-top: 5px">-->
+                <!--Add new feature-->
+                <!--</div>-->
+              </div>
+              <!-- <div class="invalid-tooltip">
+                Please fill item quantity
+              </div>
+              <div class="valid-tooltip">Looks good!</div> -->
+              <button style="margin-left: 10px" type="submit"
+                      class="btn btn-light-primary btn-icon shadow-sm">
+                <i class="fi-plus"></i>
+              </button>
+              <!-- <button class="btn btn-translucent-primary rounded-pill" type="button">Add</button> -->
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="d-flex flex-wrap mb-4">
+                <span *ngFor="let itemPackage of package.itemItemPackages;let i = index"
+                      class="bg-success text-light fs-sm btn btn-xs opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1">{{itemPackage.item.name}}
+                  <i class="fi-x fs-xs ms-2" (click)="package.itemItemPackages.splice(i,1)" style="cursor: pointer"></i>
+                </span>
         </div>
       </div>
       <div class="row">
@@ -183,7 +273,7 @@
              aria-label="Small description about your package."><i class="fi-help"></i>
           </a>
           <textarea class="form-control" id="validationTooltipp5" rows="5" placeholder="Description"
-                    required></textarea>
+                    [(ngModel)]="package.description" name="description"></textarea>
           <div class="invalid-tooltip">
             Please write something about your package
           </div>
@@ -198,9 +288,18 @@
                 first.</p>
             </div>
           </div>
-          <input class="file-uploader file-uploader-grid" type="file" multiple data-max-file-size="10MB"
-                 accept="image/png, image/jpeg"
-                 data-label-idle="&lt;div class=&quot;btn btn-primary mb-3&quot;&gt;&lt;i class=&quot;fi-cloud-upload me-1&quot;&gt;&lt;/i&gt;Upload photos&lt;/div&gt;&lt;br&gt;or drag them in">
+          <input class="file-uploader file-uploader-grid" type='file' accept="image/*" #imageInput="ngModel"
+                 data-max-file-size="5MB"
+                 [(ngModel)]="imgUrl" name="imageInput"
+                 (change)="processFile($event)" required>
+          <!--<input class="file-uploader file-uploader-grid" type="file" multiple data-max-file-size="10MB"-->
+          <!--accept="image/png, image/jpeg"-->
+          <!--data-label-idle="&lt;div class=&quot;btn btn-primary mb-3&quot;&gt;&lt;i class=&quot;fi-cloud-upload me-1&quot;&gt;&lt;/i&gt;Upload photos&lt;/div&gt;&lt;br&gt;or drag them in">-->
+        </div>
+        <div
+          *ngIf="(imageInput.touched || baManageFormPackage.submitted) && imageInput.errors?.required"
+          class="validErr" style="margin-bottom: 10px">
+          Image is required
         </div>
       </div>
       <div class="mb-3 py-2">
@@ -208,10 +307,12 @@
           <input
             class="form-check-input"
             type="checkbox"
-            id="invalidCheck"
+            id="invalidCheckP"
+            [(ngModel)]="isNewPackage"
+            name="newPackage"
             required
           />
-          <label class="form-check-label" for="invalidCheck"
+          <label class="form-check-label" for="invalidCheckP"
           >I confirm that the information provided information is accurate and correct.</label
           >
           <div class="invalid-tooltip">
@@ -219,7 +320,7 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-primary btn-md" type="submit">
+      <button class="btn btn-primary btn-md" type="submit" [disabled]="!isNewPackage">
         Save
       </button>
     </form>
